feat: adiciona um teste com pytest no exercício 2 - Transformar Dados
docs: atualizando README, GITIGNORE e REQUIREMENTS.TXT

--- a/exercicio_2_TransformarDados/.gitignore
+++ b/exercicio_2_TransformarDados/.gitignore
@@ -31,3 +31,6 @@ Pipfile.lock
 # Arquivos gerados pelo script ou fornecidos
 Teste_Felipe.zip
 RolProcedimentos&Eventos_Estruturados.csv
+
+# pytest
+.pytest_cache/
